updated buttons and ID's

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>POTE</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <meta class="foundation-mq">
 </head>
 <body>
@@ -31,54 +33,50 @@
   <div class="row" id="content">
     <!--scroll container-->
     <div class="medium-8 columns">
-      <div class="blog-post">
-        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+      <div class="event-update">
+        <h3>Event Name <small>3/6/2015</small></h3>
         <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
           Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
           ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
           luctus.</p>
         <div class="callout">
           <ul class="menu simple">
-            <li><a href="#">Author: Mike Mikers</a></li>
             <li><a href="#">Comments: 3</a></li>
           </ul>
         </div>
       </div>
-      <div class="blog-post">
-        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+      <div class="event-update">
+        <h3>Event Name <small>3/6/2015</small></h3>
         <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
           Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
           ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
           luctus.</p>
         <div class="callout">
           <ul class="menu simple">
-            <li><a href="#">Author: Mike Mikers</a></li>
             <li><a href="#">Comments: 3</a></li>
           </ul>
         </div>
       </div>
-      <div class="blog-post">
-        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+      <div class="event-update">
+        <h3>Event Name <small>3/6/2015</small></h3>
         <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
           Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
           ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
           luctus.</p>
         <div class="callout">
           <ul class="menu simple">
-            <li><a href="#">Author: Mike Mikers</a></li>
             <li><a href="#">Comments: 3</a></li>
           </ul>
         </div>
       </div>
-      <div class="blog-post">
-        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+      <div class="event-update">
+        <h3>Event Name <small>3/6/2015</small></h3>
         <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
           Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
           ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
           luctus.</p>
         <div class="callout">
           <ul class="menu simple">
-            <li><a href="#">Author: Mike Mikers</a></li>
             <li><a href="#">Comments: 3</a></li>
           </ul>
         </div>
@@ -91,12 +89,12 @@
         style="max-width: 269.5px; margin-top: 1em; top: 0px; bottom: auto; left: 868.5px;">
         <h4>Categories</h4>
         <ul>
-          <li><a href="#">Music</a></li>
-          <li><a href="#">Sports</a></li>
-          <li><a href="#">Outdoors</a></li>
-          <li><a href="#">Foodies</a></li>
-          <li><a href="#">Arts/Theater</a></li>
-          <li><a href="#">Kids</a></li>
+          <li><button class="btn btn-primary" id="music-bttn">Music</button></li>
+          <li><button class="btn btn-primary" id="sports-bttn">Sports</button></li>
+          <li><button class="btn btn-primary" id="outdoors-bttn">Outdoors</button></li>
+          <li><button class="btn btn-primary" id="foodies-bttn">Foodies</button></li>
+          <li><button class="btn btn-primary" id="arts/theater-bttn">Arts/Theater</button></li>
+          <li><button class="btn btn-primary" id="kids-bttn">Kids</button></li>
         </ul>
         <h4>Map and Weather of Tucson</h4>
         <div id="mapHere"></div>
