Added firebase functionality

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html class="" lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,9 +7,11 @@
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <meta class="foundation-mq">
 </head>
+
 <body>
   <div class="top-bar">
     <div class="top-bar-left">
@@ -98,25 +101,25 @@
         </ul>
         <h4>Map and Weather of Tucson</h4>
         <div id="mapHere"></div>
-       <div id="weatherForcast">
-         <table>
-           <tr>
-             <th>Day One</th>
-             <th>Day Two</th>
-             <th>Day Three</th>
-             <th>Day Four</th>
-             <th>Day Five</th>
-           </tr>
-           <tr>
-             <td id="dayOne"></td>
-             <td id="dayTwo"></td>
-             <td id="dayThree"></td>
-             <td id="dayFour"></td>
-             <td id="dayFive"></td>
-           </tr>
-         </table>
-       </div>
-       
+        <div id="weatherForcast">
+          <table>
+            <tr>
+              <th>Day One</th>
+              <th>Day Two</th>
+              <th>Day Three</th>
+              <th>Day Four</th>
+              <th>Day Five</th>
+            </tr>
+            <tr>
+              <td id="dayOne"></td>
+              <td id="dayTwo"></td>
+              <td id="dayThree"></td>
+              <td id="dayFour"></td>
+              <td id="dayFive"></td>
+            </tr>
+          </table>
+        </div>
+
       </div>
     </div>
   </div>
@@ -158,11 +161,14 @@
       <button class="btn btn-primary float-right" id="add-employee-btn">Submit</button>
     </form>
   </div>
+
+  <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  
   <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+  <script src="assets/javascript/javascript.js"></script>
   <script>
     $(document).foundation();
   </script>
 </body>
+
 </html>
