changes to discard

--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
       </div>
       <div class="form-group">
         <label for="start-input"> Location </label>
-        <input class="form-control" id="start-input" placeholder="1955 E 6th St, Tucson, AZ 85710" type="text">
+        <input class="form-control" id="userAddress" placeholder="1955 E 6th St" type="text">
+        <input class="form-control" id="userCity" placeholder="Tucson" type="text">
+        <input class="form-control" id="userState" placeholder="AZ" type="text">
+        <input class="form-control" id="userZipcode" placeholder="85710" type="text">
       </div>
       <div class="form-group">
         <label for="Categories">Category</label>
