--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <!--scroll container-->
     <div class="medium-3 columns sticky-container" data-sticky-container="" style="height: 318px;">
-      <div class="sticky is-at-top is-stuck" data-sticky="e1fpku-sticky" data-anchor="content"
+      <div class="stickyDiv  " data-sticky="e1fpku-sticky" data-anchor="content"
         data-resize="xlmsnw-sticky" data-events="resize"
         style="max-width: 269.5px; margin-top: 1em; top: 0px; bottom: auto; left: 868.5px;">
         <h4>Categories</h4>
