--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
+        <li><a href="#">About</a></li>
+ 
       </ul>
     </div>
   </div>
@@ -34,50 +32,10 @@
     </div>
   </div>
   <div class="row" id="content">
-    <!--scroll container-->
+   
+    <!--event upload-->
     <div class="medium-8 columns">
-      <div class="event-update">
-        <h3>Event Name <small>3/6/2015</small></h3>
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
-          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
-          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-          luctus.</p>
-        <div class="callout">
-          <ul class="menu simple">
-            <li><a href="#">Comments: 3</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="event-update">
-        <h3>Event Name <small>3/6/2015</small></h3>
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
-          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
-          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-          luctus.</p>
-        <div class="callout">
-          <ul class="menu simple">
-            <li><a href="#">Comments: 3</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="event-update">
-        <h3>Event Name <small>3/6/2015</small></h3>
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
-          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
-          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-          luctus.</p>
-        <div class="callout">
-          <ul class="menu simple">
-            <li><a href="#">Comments: 3</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="event-update">
-        <h3>Event Name <small>3/6/2015</small></h3>
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
-          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
-          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-          luctus.</p>
+      <div class="event-update" id="content">
         <div class="callout">
           <ul class="menu simple">
             <li><a href="#">Comments: 3</a></li>
@@ -85,7 +43,9 @@
         </div>
       </div>
     </div>
-    <!--scroll container-->
+    <!--events upload-->
+
+    <!--catergories and map weather div-->
     <div class="medium-3 columns sticky-container" data-sticky-container="" style="height: 318px;">
       <div class="stickyDiv" data-sticky="e1fpku-sticky" data-anchor="content"
         data-resize="xlmsnw-sticky" data-events="resize"
@@ -125,7 +85,10 @@
   </div>
   </ul>
   </div>
-  <!-- Entry Form -->
+
+<!-- catergories and map weather div --> 
+
+<!-- Entry Form -->
   <div id="formContainer">
     <form>
       <div class="form-group">
@@ -161,6 +124,7 @@
       <button class="btn btn-primary float-right" id="add-event-button">Submit</button>
     </form>
   </div>
+<!-- Entry Form -->  
 
   <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
